feat(ingestion): add executions filtering by accessible ingestion sources (#393) (#5922)